--- a/index.html
+++ b/index.html
@@ -13,27 +13,35 @@
 </head>
 
 <body>
-  <div class="card-background">
-    <img src="images/image-equilibrium.jpg" alt="">
-  
-    <p>Equilibrium #3429</p>
 
-    <p>Our Equilibrium collection promotes balance and calm.</p>
-
-    <img src="images/icon-ethereum.svg" alt="">
-    <p>0.041 ETH</p>
-    <img src="images/icon-clock.svg" alt="">
-    <p>3 days left</p>
-
-    <div></div>
-  
-    <img src="images/image-avatar.png" alt="">
-    <p>Creation of Jules Wyvern</p>
+  <div class="card">
+    <div class="div_photo_nft">
+      <img class="img_photo_nft" src="images/image-equilibrium.jpg" alt="">
+      <img class="img_eye_overlay" src="images/icon-view.svg" alt="">
+      <div class="overlay">
+        <div class="img_photo_overlay"></div>
+      </div>
+    </div>
+    <div class="title"><p><a href="#">Equilibrium #3429</a></p></div>
+    <div class="description"><p>Our Equilibrium collection promotes balance and calm.</p></div>
+    <div class="infos">
+      <div class="eth">
+        <div class="img_eth"><img src="images/icon-ethereum.svg" alt=""></div>
+        <div class="text_eth"><p>0.041 ETH</p></div>
+      </div>
+      <div class="days">
+        <div class="img_3days"><img src="images/icon-clock.svg" alt=""></div>
+        <div class="text_3days"><p>3 days left</p></div>
+      </div>      
+    </div>
+    <div class="line"></div>
+    <div class="avatar">
+      <img class="img_avatar" src="images/image-avatar.png" alt="">
+      <div class="text_avatar"><p>Creation of <a href="#">Jules Wyvern</a></p></div>
+    </div>
   </div>
-
   <div class="attribution">
-    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
-    <p>Coded by <a href="http://www.kavaseb.com">Sébastien FERRAN</a>.</p>
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="http://www.kavaseb.com">Sébastien FERRAN</a>.</p>
   </div>
 
 </body>
