--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <div class="card">
+  <nav class="card">
     <div class="div_photo_nft">
       <img class="img_photo_nft" src="images/image-equilibrium.jpg" alt="">
       <img class="img_eye_overlay" src="images/icon-view.svg" alt="">
@@ -22,7 +22,7 @@
         <div class="img_photo_overlay"></div>
       </div>
     </div>
-    <div class="title"><p><a href="#">Equilibrium #3429</a></p></div>
+    <div class="title"><h1><a href="#">Equilibrium #3429</a></h1></div>
     <div class="description"><p>Our Equilibrium collection promotes balance and calm.</p></div>
     <div class="infos">
       <div class="eth">
@@ -39,10 +39,10 @@
       <img class="img_avatar" src="images/image-avatar.png" alt="">
       <div class="text_avatar"><p>Creation of <a href="#">Jules Wyvern</a></p></div>
     </div>
-  </div>
-  <div class="attribution">
+  </nav>
+  <footer class="attribution">
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="http://www.kavaseb.com">Sébastien FERRAN</a>.</p>
-  </div>
+  </footer>
 
 </body>
 </html>
